--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify -- Web Player</title>
     <!-- Cascade Style Sheet -->
-    <link rel="stylesheet" href="Spotify -- Web Player.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="body-separator" id="side-navigation">
